--- a/csf-installation.yaml
+++ b/csf-installation.yaml
@@ -1,3 +1,7 @@
+# this playbook will install the csf firewall on your linux
+# and then it will bring the csf out of test phase, and also 
+# it will remove the source installation files
+
 - name: install csf
   hosts: all
   gather_facts: false
