--- a/csf-installation.yaml
+++ b/csf-installation.yaml
@@ -22,6 +22,7 @@
         path: /etc/csf/csf.conf
         regexp: "^TESTING = \"1\""
         line: "TESTING = \"0\""
+      notify: restart csf
     - name: remove the source
       file:
         path: /usr/src/csf
